--- a/package.json
+++ b/package.json
@@ -45,17 +45,22 @@
     },
     "devDependencies": {
         "@babel/core": "^7.17.10",
-        "@emotion/babel-plugin": "^11.9.2",
         "@babel/preset-env": "^7.17.10",
         "@babel/preset-react": "^7.16.7",
         "@babel/preset-typescript": "^7.16.7",
+        "@date-io/date-fns": "^2.14.0",
+        "@emotion/babel-plugin": "^11.9.2",
+        "@material-ui/core": "^4.12.4",
+        "@material-ui/pickers": "^3.3.10",
         "babel-core": "^6.26.3",
         "babel-loader": "^8.2.5",
         "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.24.1",
         "clean-webpack-plugin": "^4.0.0",
         "css-loader": "^6.7.1",
+        "date-fns": "^2.28.0",
         "html-webpack-plugin": "^5.5.0",
+        "react-material-ui-calendar": "^0.2.3",
         "style-loader": "^3.3.1",
         "ts-loader": "^9.3.0",
         "typescript": "^4.6.4",
